--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,30 +1,84 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CSINEWS</title>
- <link rel="stylesheet" href="estilos.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>CSINEWS</title>
+	<link rel="stylesheet" href="estilos.css">
 </head>
+
 <body>
-	<table class="tabla">
-		<tr>
-			<th class="titulo">CSINEWS</th>
-		</tr>
-		<tr class="azul">
-			<td class="azul"><button>Contacta con nosotros</button><button>Inicio</button></td>
-		</tr>
-		<tr>
-			<td>
-				<div class="noticia"></div>
-			</td>
-		</tr>
-		<tr>
-			<td>3</td>
-		</tr>
-		<tr>
-			<td>CSINEWS 2023</td>
-		</tr>
-	</table>
+	<header class="cabezera">
+		<h1>CSINews</h1>
+	</header>
+	<nav class="barra">
+		<a class="button" href="formulario.html">
+			<p class="letra">Contacta con nosotros</p>
+		</a>
+		<a class="button" href="noticias.html">
+			<p class="letra">Noticias Navideñas</p>
+		</a>
+	</nav>
+	<main>
+		<aside class="public">
+			<img src="#" alt="Inserte anuncio">
+		</aside>
+
+		<article class="not1">
+			<header>
+				<h3>El sorprendente descubrimiento de la planta que podría hacer bajar la factura de la luz.</h3>
+			</header>
+			<p>¡Última hora!
+				En un sorprendente y emocionante descubrimiento científico, un equipo de investigadores ha anunciado el
+				hallazgo de un nuevo tipo de planta que produce energía eléctrica de manera natural. Esta asombrosa
+				especie, denominada "Energiaflora Eléctrica", se ha encontrado en una remota región de la selva
+				amazónica.
+
+				Según los científicos, las hojas de esta planta contienen células especializadas capaces de convertir la
+				luz solar en electricidad mediante un proceso similar a la fotosíntesis. Estas células, conocidas como
+				"electrofotosintéticas", generan corriente eléctrica al absorber la radiación solar.
+
+				Los investigadores están entusiasmados con los resultados de esta planta, ya que podría revolucionar la
+				forma en que se obtiene y se distribuye la energía en todo el mundo. La Energiaflora Eléctrica podría
+				convertirse en una fuente renovable de electricidad, reduciendo nuestra dependencia de los combustibles
+				fósiles y disminuyendo la emisión de gases de efecto invernadero.
+
+				Sin embargo, los expertos también señalan que aún queda mucho por investigar acerca de esta planta y su
+				potencial aplicación a gran escala. Se necesitarán más estudios para comprender su ciclo de vida, su
+				eficiencia energética y la viabilidad de cultivarla en diferentes entornos.
+
+				Este fascinante descubrimiento destaca una vez más la importancia de la conservación de los ecosistemas
+				naturales, ya que la selva amazónica continúa siendo una fuente inagotable de sorpresas y soluciones
+				innovadoras para los desafíos que enfrentamos como sociedad.</p>
+		</article>
+		<article class="not2">
+			<header>
+				<h3>Un nuevo descubrimiento en la selva amazónica</h3>
+			</header>
+			<p>Descubren una nueva especie de mariposa en la selva amazónica"
+
+				Un equipo de científicos ha encontrado una nueva especie de mariposa en lo profundo de la selva
+				amazónica. La mariposa, llamada "Morpho amazonica", destaca por sus hermosas alas azules iridiscentes,
+				que la hacen especialmente llamativa.
+
+				La expedición científica estaba estudiando la biodiversidad de la región cuando se encontraron con esta
+				mariposa completamente nueva para la ciencia. Los expertos creen que su color brillante es una
+				estrategia de defensa para confundir a los depredadores y posiblemente para atraer a posibles
+				compañeros.
+
+				Este descubrimiento destaca la importancia de la conservación de los ecosistemas naturales. La selva
+				amazónica es conocida por ser uno de los lugares más ricos en biodiversidad del mundo, y cada nuevo
+				hallazgo nos muestra la importancia de proteger y preservar estos hábitats únicos. Los científicos
+				continuarán estudiando a la mariposa Morpho amazonica para aprender más sobre su comportamiento, hábitat
+				y contribución al ecosistema amazónico.
+
+				¡La naturaleza siempre nos sorprende con nuevas maravillas por descubrir!</p>
+		</article>
+	</main>
+	<footer>
+		<p class="pie">&copy; CSINews 2023 </p>
+	</footer>
 </body>
+
 </html>
